Fixed code, altered comments to improve readability

--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "147c28ea",
+   "id": "95122857",
    "metadata": {},
    "source": [
     "Scraping McDonalds' Menu"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "67f80703",
+   "execution_count": 8,
+   "id": "0de863a9",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd23c51c",
+   "id": "8f15107e",
    "metadata": {},
    "source": [
     "Scraping Chick Fil A menu"
@@ -128,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "263f6694",
+   "execution_count": 9,
+   "id": "748e0784",
    "metadata": {},
    "outputs": [
     {
@@ -139,32 +139,42 @@
       "Saved page source to: C:\\Users\\asmit\\OneDrive\\Desktop\\fast_food_nutrition\\data\\cfa_page_source.html\n",
       "\n",
       "First 5 Chick-fil-A items:\n",
-      "                               Item Calories Total Fat (g) Saturated Fat (g)  \\\n",
-      "0       Bacon, Egg & Cheese Biscuit      420            23                11   \n",
-      "1        Bacon, Egg & Cheese Muffin      300            13                 6   \n",
-      "2  Berry Parfait with Cookie Crumbs      240             8               3.5   \n",
-      "3        Berry Parfait with Granola      270             9               3.5   \n",
-      "4                   Buttery Biscuit      290            15                 6   \n",
+      "                                 Item Calories Total Fat (g)  \\\n",
+      "0   4 Count Chick-Fil-A Chick-N-Minis      360            13   \n",
+      "1            4 Count Mini Yeast Rolls      240             8   \n",
+      "2  10 Count Chick-Fil-A Chick-N-Minis      910            34   \n",
+      "3         Bacon, Egg & Cheese Biscuit      420            23   \n",
+      "4          Bacon, Egg & Cheese Muffin      300            13   \n",
       "\n",
-      "  Trans Fat (g) Cholesterol (mg) Sodium (mg) Total Carbohydrates (g)  \\\n",
-      "0             0              180        1220                      38   \n",
-      "1             0              180         780                      28   \n",
-      "2             0               20          85                      31   \n",
-      "3             0               20          85                      35   \n",
-      "4             0                0         760                      37   \n",
+      "  Saturated Fat (g) Trans Fat (g) Cholesterol (mg) Sodium (mg)  \\\n",
+      "0                 4             0               60        1060   \n",
+      "1               2.5             0               20         450   \n",
+      "2                10             0              150        2640   \n",
+      "3                11             0              180        1220   \n",
+      "4                 6             0              180         780   \n",
       "\n",
-      "  Dietary Fiber (g) Sugars (g) Protein (g)  \n",
-      "0                 2          4          15  \n",
-      "1                 1          2          16  \n",
-      "2                 1         25          12  \n",
-      "3                 1         26          13  \n",
-      "4                 2          4           4  \n",
+      "  Total Carbohydrates (g) Dietary Fiber (g) Sugars (g) Protein (g)  \n",
+      "0                      41                 2          8          20  \n",
+      "1                      36                 2          7           6  \n",
+      "2                     103                 6         19          49  \n",
+      "3                      38                 2          4          15  \n",
+      "4                      28                 1          2          16  \n",
       "\n",
-      "Successfully saved 292 items to: C:\\Users\\asmit\\OneDrive\\Desktop\\fast_food_nutrition\\data\\chick_fil_a_nutrition.csv\n"
+      "Successfully saved 355 items to: C:\\Users\\asmit\\OneDrive\\Desktop\\fast_food_nutrition\\data\\chick_fil_a_nutrition.csv\n"
      ]
     }
    ],
    "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
     "# Configure Chrome options\n",
     "chrome_options = Options()\n",
     "# chrome_options.add_argument(\"--headless\")  # Uncomment when done testing\n",
@@ -179,10 +189,24 @@
     "try:\n",
     "    cfa_url = \"https://www.nutritionix.com/chick-fil-a/menu/premium?desktop\"\n",
     "    driver.get(cfa_url)\n",
-    "    \n",
     "\n",
+    "    # Wait for the table to load\n",
+    "    WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.CLASS_NAME, 'tblCompare'))\n",
+    "    )\n",
     "\n",
-    "    # Parse the page source\n",
+    "    # Scroll to bottom to load all content\n",
+    "    SCROLL_PAUSE_TIME = 1.5\n",
+    "    last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "    while True:\n",
+    "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "        time.sleep(SCROLL_PAUSE_TIME)\n",
+    "        new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "        if new_height == last_height:\n",
+    "            break\n",
+    "        last_height = new_height\n",
+    "\n",
+    "    # Parse the fully-loaded page source\n",
     "    cfa_soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "\n",
     "    # Save HTML locally\n",
@@ -190,7 +214,7 @@
     "    with open(cfa_source_path, 'w', encoding='utf-8') as f:\n",
     "        f.write(cfa_soup.prettify())\n",
     "    print(f\"Saved page source to: {cfa_source_path}\")\n",
-    "    \n",
+    "\n",
     "    cfa_menu_data = []\n",
     "\n",
     "    # Locate the nutrition table\n",
@@ -251,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6687cd49",
+   "id": "17a52cba",
    "metadata": {},
    "source": [
     "Scraping Burger King Menu"
@@ -259,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7a10db50",
+   "execution_count": 10,
+   "id": "9d0bbd03",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65243481",
+   "id": "970843c4",
    "metadata": {},
    "source": [
     "Scraping KFC menu"
@@ -390,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "01a23f45",
+   "execution_count": 11,
+   "id": "4ef7750f",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb50b6aa",
+   "id": "6e063cb7",
    "metadata": {},
    "source": [
     "Scraping SubWay menu"
@@ -519,8 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3be88c55",
+   "execution_count": 12,
+   "id": "abd1a4f9",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c64f62",
+   "id": "9e0bb36e",
    "metadata": {},
    "outputs": [],
    "source": []
